Fixes to spacing on 50-50 and 25-75 text-image molecules
Replace rule with div

--- a/cfgov/unprocessed/css/molecules/image-text-25-75.less
+++ b/cfgov/unprocessed/css/molecules/image-text-25-75.less
@@ -87,6 +87,10 @@
                                  @grid_gutter-width ) / @base-font-size-px, em );
         } );
     }
+
+    &:last-child {
+        padding: 0;
+    }
 }
 
 /* topdoc
